# embdebug-target-core-v

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_utils.cmake
